modidy  Array的arr.sort()

--- a/ways/array.html
+++ b/ways/array.html
@@ -45,9 +45,9 @@
     // 8  arr.sort()  将数组进行排序,返回值是排好的数组，默认是按照最左边的数字进行排序，不是按照数字大小排序的，见例子。
     // let arr = [2,10,6,1,4,22,3]
     // console.log(arr.sort())   // [1, 10, 2, 22, 3, 4, 6]
-    // let arr1 = arr.sort((a, b) =>a > b)  
+    // let arr1 = arr.sort((a, b) =>a - b)  
     // console.log(arr1)   // [1, 2, 3, 4, 6, 10, 22]
-    // let arr2 = arr.sort((a, b) =>a < b)  
+    // let arr2 = arr.sort((a, b) =>b - a)  
     // console.log(arr2)  // [22, 10, 6, 4, 3, 2, 1]
 
     // 9  arr.reverse() 将数组反转,返回值是反转后的数组
