回顾Map，添加一些记录

--- a/ways/SetAndMap.html
+++ b/ways/SetAndMap.html
@@ -173,7 +173,16 @@
         //     values()：返回键值的遍历器。
         //     entries()：返回所有成员的遍历器。
         //     forEach()：遍历 Map 的所有成员。
-
+        // Map与Object的区别：
+        //     1. 在 Map 中存放的键，都是按照存入顺序排列的，
+        //     2. 而Object则会根据一套规则进行排序： 
+        //         1.  非负整数有限，顺序是从小到大；
+        //         2. 然后是字符串、负整数、浮点数，顺序是插入的顺序；
+        //         3.  最后是 Symbol，顺序是插入的顺序
+        // Map与Object的比较：
+        //     1. 何时使用Map —— 存储的键不是字符串/数字/Symbol时选择Map，因为Object并不支持；要存储大量数据或需要进行许多增/删操作时选择Map，因为速度更快；需要保持插入顺序时选择Map，因为Object会改变；需要迭代/遍历时选择Map，因为它默认是可迭代对象；
+        //     2. 何时使用Object —— 只是简单的数据结构或数据量比较小时选择Object，因为数据少时它占用内存更少，且新建效率更高；需要用到JSON进行文件传输时选择Object，因为JSON默认不支持Map；需要覆盖原型上的键时选择Object；
+        //     eg：js是基于原型的，在js中相同的复杂类型一定都有一个共同的“父类”！Map也是基于Object。
 
         // WeakMap
         // 功能和Map一样，区别是WeakMap只能接受对象为键名，不接受其他类型的。
